# agraphdb

./: .main.cpp.kate-swp  CMakeLists.txt  boilerplate.cpp  boilerplate.h  graph.h  graphdb.kdev4  graphdb.pro  main.cpp  node.h  node.h.autosave
.kdev4/: graphdb.kdev4
datatypes/: float64.h  int64.h  json.h  utfstring.h
old/: not_quite_thread_safe_node.h
unit_tests/: graph_test.h  node_test.h
